@@ -7,6 +7,7 @@
 - fixed `controller.json()` method
 - fixed `array.quicksort()` method
 - fixed `controller.invalid()`, added missing second argument called `error` (optional)
+- improved error handling in WebSocket
 - improved HTTP caching in merged files
 - improved unit-testing
 
